@@ -35,29 +35,55 @@ strong_alias(__elk_ ## feature, __elk_feature_ ## function);
 
 #if !defined(__ELK__)
 // Building ELK to run under Linux.
-#define CONSTRUCTOR() \
+// We'll use C constructors for everything.
+#define ELK_CONSTRUCTOR() \
 static void __elk_init(void) \
     __attribute__((__constructor__, __used__)); \
 static void __elk_init(void)
 
-#define CONSTRUCTOR_BY_NAME(returns, name) \
+#define ELK_CONSTRUCTOR_BY_NAME(returns, name) \
 returns name(void) \
     __attribute__((__constructor__, __used__)); \
 returns name(void)
+
+#define C_CONSTRUCTOR() \
+static void __elk_c_init(void) \
+    __attribute__((__constructor__, __used__)); \
+static void __elk_c_init(void)
+
+#define C_CONSTRUCTOR_BY_NAME(returns, name) \
+returns name(void) \
+    __attribute__((__constructor__, __used__)); \
+returns name(void)
+
 #else
-#define CONSTRUCTOR() \
+// Building ELK to run bare bones.
+// The ELK constructors come before C library initialization.
+
+#define ELK_CONSTRUCTOR() \
 static void __elk_init(void); \
 static void (*__elk_init_p)(void) \
   __attribute((section (".elk_init_array"), __used__)) \
      = __elk_init; \
 static void __elk_init(void)
 
-#define CONSTRUCTOR_BY_NAME(returns, name) \
+#define ELK_CONSTRUCTOR_BY_NAME(returns, name) \
 returns name(void); \
 static returns (*name ## _p)(void) \
   __attribute((section (".elk_init_array"), __used__)) \
      = name; \
 returns name(void)
+
+#define C_CONSTRUCTOR() \
+static void __elk_c_init(void) \
+    __attribute__((__constructor__, __used__)); \
+static void __elk_c_init(void)
+
+#define C_CONSTRUCTOR_BY_NAME(returns, name) \
+returns name(void) \
+    __attribute__((__constructor__, __used__)); \
+returns name(void)
+
 #endif
 
 typedef struct
